third_party/move/move-compiler-v2/tests/uninit-use-checker/uses_before_assign.exp

Diagnostics:
warning: Unused local variable `z`. Consider removing or prefixing with an underscore: `_z`
  ┌─ tests/uninit-use-checker/uses_before_assign.move:5:9
  │
5 │     let z = x + y;
  │         ^


Diagnostics:
error: use of unassigned local `x`
  ┌─ tests/uninit-use-checker/uses_before_assign.move:5:13
  │
5 │     let z = x + y;
  │             ^

error: use of unassigned local `y`
  ┌─ tests/uninit-use-checker/uses_before_assign.move:5:17
  │
5 │     let z = x + y;
  │                 ^
